Refactor UI components and improve error handling
Consolidate code by reducing redundant lines and simplifying button actions in AuthWindow. Enhance error handling in addBookApp for different windows. Correct label strings in SignupWindow and change to using List.of for setting hints. Added error prompts in AuthorsWindow for missing author first names.